# alation-dict

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
examples/: patch_record.py  search_dictionary.py  update_dictionary.py
src/alation_dict/: __init__.py  client.py  dictionary.py  record.py  storage.py
tests/: duplicate_record.py  lookup_returns_correct_results.py  name_changed.py  run_test_suite.py  same_id_new_info.py
