[project]
name = "alation-dict"
version = "0.1.0"
description = "Tools for managing Alation dictionary records"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "annotated-types==0.7.0",
  "beautifulsoup4==4.14.3",
  "certifi==2026.1.4",
  "charset-normalizer==3.4.4",
  "click==8.3.1",
  "colorama==0.4.6",
  "idna==3.11",
  "mypy_extensions==1.1.0",
  "packaging==25.0",
  "pathspec==1.0.2",
  "platformdirs==4.5.1",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "pytokens==0.3.0",
  "RapidFuzz==3.14.3",
  "requests==2.32.5",
  "soupsieve==2.8.1",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "urllib3==2.6.3",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
